--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ function loadSection(key) {
   fetch(SECTIONS[key].url)
     .then(res => res.text())
     .then(csv => {
-      const rows = csv.trim().split("\n").map(r => r.split(","));
+      const rows = csv.trim().split("\n").map(r => r.split(" "));
       SECTIONS[key].render(rows);
     })
     .catch(() => {
