--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       --accent-color: #FDBA18;    /* Bear Gold */
 
       /* UI NEUTRALS */
-      --bg-color: #F4F6F8;
+      --bg-color: #003362;
       --card-bg: #FFFFFF;
       --text-color: #111827;
       --muted-text: #6B7280;
@@ -153,7 +153,7 @@
     </div>
 
     <footer>
-      Internal use only. Paid for by Swalwell for Governor 2026
+      Internal use only. Paid for by Swalwell for Governor 2026.
     </footer>
 
   </div>
