--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       /* UI NEUTRALS */
       --bg-color: #003362;
       --card-bg: #FFFFFF;
-      --text-color: #111827;
+      --text-color: #FDB515;
       --muted-text: #6B7280;
       --border-color: #E5E7EB;
     }
