--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     :root {
       /* 🎨 BRAND COLORS */
-      --primary-color: #003A6F;   /* Swalwell Navy */
+      --primary-color: #FFFFFF;   /* Swalwell Navy */
       --accent-color: #FDBA18;    /* Bear Gold */
 
       /* UI NEUTRALS */
@@ -46,12 +46,12 @@
     }
 
     header img {
-      height: 78px;
+      height: 200px;
       width: auto;
     }
 
     header h1 {
-      font-size: 22px;
+      font-size: 75px;
       font-weight: 600;
       margin: 0;
       color: var(--primary-color);
