--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     body {
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Inter",
+      font-family: -Futra, Montserrat, "CoffeeService",
                    "Segoe UI", Roboto, sans-serif;
       background: var(--bg-color);
       color: var(--text-color);
