--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     body {
       margin: 0;
-      font-family: -Futra, Montserrat, "CoffeeService",
-                   "Segoe UI", Roboto, sans-serif;
+      font-family: -Futra, Montserrat, "CoffeeService"
+                  
       background: var(--bg-color);
       color: var(--text-color);
       padding: 20px;
