--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     body {
       margin: 0;
       font-family: -Futra, Montserrat, "CoffeeService"
-                   "Futra", Montserrat, CoffeeService;
+                    "Segoe UI", Roboto, sans-serif;
       background: var(--bg-color);
       color: var(--text-color);
       padding: 20px;
