--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <style>
     :root {
       /* 🎨 BRAND COLORS */
-      --primary-color: #FFFFFF;   /* Swalwell Navy */
+      --primary-color: #003362;   /* Swalwell Navy */
       --accent-color: #FDBA18;    /* Bear Gold */
 
       /* UI NEUTRALS */
-      --bg-color: #003362;
+      --bg-color: #FDBA18;
       --card-bg: #FFFFFF;
       --text-color: #FDB515;
-      --muted-text: #6B7280;
+      --muted-text: #FFFFFF;
       --border-color: #E5E7EB;
     }
 
@@ -25,7 +25,7 @@
 
     body {
       margin: 0;
-      font-family: -Futra, Montserrat, "CoffeeService"
+      font-family: -Futra, Montserrat, "Futra"
                     "Segoe UI", Roboto, sans-serif;
       background: var(--bg-color);
       color: var(--text-color);
