--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <div class="app">
 
     <header>
-      <img src="assets/bear-logo.png" alt="SFG Bear Logo">
+      <img src="assets/yellow-bear.png" alt="SFG Bear Logo Yellow">
       <h1>SFG TEAM APP</h1>
     </header>
 
