--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ const SECTIONS = {
     render: renderFundraising
   },
   TeamInfo: {
-    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT1Z0IB-xXvYnIk7GnsqFOXdsFB8D7_WfIVMQhCiSmLg_6Ye9mCyTbi6YZgc7HMFIdhdCEAM0I9lcsJ/pubhtml?gid=1184013325&single=true",
+    url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT1Z0IB-xXvYnIk7GnsqFOXdsFB8D7_WfIVMQhCiSmLg_6Ye9mCyTbi6YZgc7HMFIdhdCEAM0I9lcsJ/pubhtml?gid=1184013325&single=true&output=csv",
     render: renderTeamInfo
   }
 };
