--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@ function renderFundraising(rows) {
     html += `
       <tr>
         <td>${name}</td>
-        <td>${email}</td>
-        <td>${phone}</td>
+        <td><a href="mailto:${email}">${email}</a></td>
+        <td><a href="tel:${phone}">${phone}</a></td>
         <td>${position}</td>
       </tr>
     `;
