--- a/index.html
+++ b/index.html
@@ -158,6 +158,24 @@
   </div>
 
 <script>
+  <script>
+(function () {
+  const PASSWORD = "SFG26!";
+
+  // If already authenticated this session, allow
+  if (sessionStorage.getItem("sfg_auth") === "true") return;
+
+  const input = prompt("Enter password:");
+
+  if (input === PASSWORD) {
+    sessionStorage.setItem("sfg_auth", "true");
+  } else {
+    document.body.innerHTML = "";
+    alert("Access denied.");
+  }
+})();
+</script>
+
 /* ---------- CSV PARSER (HANDLES COMMAS SAFELY) ---------- */
 function parseCSV(text) {
   const rows = [];
