--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   </div>
 
   <script>
-(function () {
+function {
   const PASSWORD = "SFG26!";
 
   if (sessionStorage.getItem("sfg_auth") === "true") return;
@@ -171,7 +171,7 @@
     document.body.innerHTML = "";
     alert("Access denied.");
   }
-})();
+}
 </script>
 
 /* ---------- CSV PARSER (HANDLES COMMAS SAFELY) ---------- */
