--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         <option value="quickLinks">Quick Links</option>
         <option value="fundraising">Fundraising Summary</option>
         <option value="TeamInfo">Team Contact Information</option>
+        <option value="wiringInfo">Donor Wire & Mail Information</option>
       </select>
     </div>
 
@@ -219,6 +220,10 @@ const SECTIONS = {
   TeamInfo: {
     url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vT1Z0IB-xXvYnIk7GnsqFOXdsFB8D7_WfIVMQhCiSmLg_6Ye9mCyTbi6YZgc7HMFIdhdCEAM0I9lcsJ/pub?gid=1184013325&single=true&output=csv",
     render: renderTeamInfo
+  },
+  wiringInfo: {
+    url: null,
+    render: renderwiringInfo
   }
 };
 
@@ -229,11 +234,16 @@ select.addEventListener("change", () => loadSection(select.value));
 
 function loadSection(key) {
   content.innerHTML = "Loading…";
-  fetch(SECTIONS[key].url)
+  const section = SECTIONS [key];
+  if (section.url) {
+    fetch(section.url)
     .then(r => r.text())
     .then(text => parseCSV(text))
-    .then(rows => SECTIONS[key].render(rows))
+    .then(rows => section.render(rows))
     .catch(() => content.innerHTML = "Failed to load data.");
+} else {
+    section.render();
+  }
 }
 
 function renderQuickLinks(rows) {
@@ -290,6 +300,28 @@ function renderFundraising(rows) {
 
   html += "</table>";
   content.innerHTML = html;
+}
+
+function renderDonorWireMail() {
+  const pdfUrl = "assets/wiring-info.pdf";
+  content.innerHTML = `
+    <div style="text-align: center; padding: 40px 20px;">
+      <h2 style="margin-bottom: 24px; font-size: 24px;">Donor Wire & Mail Information</h2>
+      <a href="${pdfUrl}" download style="
+        display: inline-block;
+        padding: 16px 32px;
+        background: var(--gold);
+        color: var(--navy);
+        text-decoration: none;
+        border-radius: 8px;
+        font-weight: 700;
+        font-size: 18px;
+        transition: background 0.2s;
+      " onmouseover="this.style.background='#f0a800'" onmouseout="this.style.background='var(--gold)'">
+        Download PDF
+      </a>
+    </div>
+  `;
 }
 
 loadSection("quickLinks");
