--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     }
 
     td:first-child {
-      font-weight: 600;
+      font-weight: 400;
     }
 
     footer {
@@ -276,7 +276,7 @@ function renderFundraising(rows) {
     <tr>
       <td><strong>Name</strong></td>
       <td><strong>Email</strong></td>
-      <td><strong>Phone</strong></td>
+      <td><strong>Number</strong></td>
       <td><strong>Role</strong></td>
     </tr>
   `;
