--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
     }
 
     td:first-child {
+      font-weight: 600;
+    }
+
+    td:nth-child (2),
+    td:nth-child (3) {
       font-weight: 400;
     }
 
