--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
       font-weight: 600;
     }
 
-    td:nth-child (2),
-    td:nth-child (3) {
-      font-weight: 400;
+    td a {
+      font-weight: normal;
     }
 
     footer {
