--- a/index.html
+++ b/index.html
@@ -126,6 +126,46 @@
       font-weight: normal;
     }
 
+    
+    /* MOBILE RESPONSIVE: TABLE CONTAINER */
+    .card {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+
+    /* MOBILE: SMALLER TABLE CELLS */
+    @media (max-width: 768px) {
+      table {
+        min-width: 600px; /* Prevents table from compressing too much */
+      }
+
+      td {
+        padding: 10px 8px;
+        font-size: 14px;
+        white-space: nowrap;
+      }
+
+      /* Make email and phone links break if needed */
+      td:nth-child(2),
+      td:nth-child(3) {
+        white-space: normal;
+        word-break: break-all;
+        max-width: 150px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      td {
+        padding: 8px 6px;
+        font-size: 12px;
+      }
+
+      td:nth-child(2),
+      td:nth-child(3) {
+        max-width: 120px;
+      }
+    }
+
     footer {
       margin-top: 32px;
       font-size: 12px;
